Corrected overflow, adjusted image position

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,16 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-*   {
-    box-sizing: border-box;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
-
-body{
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-}
-
 
 
 .nav-menu{
